[package]
name = "wst-server"
version = "0.1.0"
edition = "2021"
authors = ["Brad Folkens <i.am@bradfolkens.com>"]
license = "MIT"
repository = "https://github.com/cignalsio/wst-server"
description = "WebSocket Time Protocol (WST) - Server Implementation"
keywords = ["WebSocket", "WST", "NTP", "PTP", "cli", "time"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
futures-util = "0.3"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

[[bin]]
name = "wst"
path = "src/main.rs"
